--- a/Yelp.ipynb
+++ b/Yelp.ipynb
@@ -93,7 +93,7 @@
    ],
    "source": [
     "# Install the important libraries\n",
-    "!pip install yelpapi textblob wordcloud nltk matplotlib pandas\n",
+    "!pip install yelpapi textblob wordcloud nltk matplotlib pandas python-dotenv\n",
     "\n",
     "# Importing necessary libraries\n",
     "import requests\n",
@@ -104,14 +104,20 @@
     "from nltk.corpus import stopwords\n",
     "from wordcloud import WordCloud\n",
     "import nltk\n",
+    "from dotenv import load_dotenv\n",
+    "import os\n",
     "\n",
-    "# Downloading NLTK \n",
+    "# Load environment variables\n",
+    "load_dotenv()  # This will load environment variables from a .env file\n",
+    "api_key = os.getenv(\"YELP_API_KEY\")\n",
+    "if not api_key:\n",
+    "    raise ValueError(\"API key not found. Please set it in the .env file.\")\n",
+    "\n",
+    "# NLTK setup\n",
     "nltk.download('stopwords')\n",
     "nltk.download('punkt')\n",
     "\n",
     "# API Setup\n",
-    "#ApI key\n",
-    "api_key = \"9F_s1ES7zWFSsWT8SlhxAhOVK-Tk_5jGtGgyiJhnct4cDXrGdjAMkMdmmeYTqRdVTEJXbWTPCdAh1fas6JAkQrYLhZ9rWbsVXlhIePicia5XV1UOcb3BryAjn986ZHYx\"  \n",
     "headers = {\"Authorization\": f\"Bearer {api_key}\"}\n",
     "url = \"https://api.yelp.com/v3/businesses/search\"\n",
     "params = {\n",
@@ -125,11 +131,11 @@
     "response.raise_for_status()\n",
     "businesses = response.json()[\"businesses\"]\n",
     "\n",
-    "# Fetchig the reviews for businesses\n",
+    "# Fetching the reviews for businesses\n",
     "reviews = []\n",
     "\n",
-    "#Using a loop to fetch more b uisnesses data\n",
-    "for business in businesses[:20]:  \n",
+    "# Using a loop to fetch more business data\n",
+    "for business in businesses[:20]:\n",
     "    business_id = business[\"id\"]\n",
     "    review_url = f\"https://api.yelp.com/v3/businesses/{business_id}/reviews\"\n",
     "    review_response = requests.get(review_url, headers=headers)\n",
@@ -173,8 +179,7 @@
     "plt.imshow(wordcloud, interpolation=\"bilinear\")\n",
     "plt.axis(\"off\")\n",
     "plt.title(\"Top Words in Reviews\", fontsize=16)\n",
-    "plt.show()\n",
-    "\n"
+    "plt.show()\n"
    ]
   }
  ],
